added new agents

--- a/GravityGrappler.html
+++ b/GravityGrappler.html
@@ -14,10 +14,13 @@
 
 <script type="text/javascript">
 
+    var SizeY = 800;
+    var SizeX = 1400;
+
     var config = {
         type: Phaser.AUTO,
-        width: 800,
-        height: 600,
+        width: SizeX,
+        height: SizeY,
         physics: {
             default: 'arcade',
             arcade: {
@@ -38,83 +41,78 @@
     {
         this.load.image('sky', 'assets/sky.png');
         this.load.image('ground', 'assets/platform.png');
-        this.load.image('star', 'assets/star.png');
-        this.load.image('bomb', 'assets/bomb.png');
-        this.load.spritesheet('dude', 'assets/dude.png', { frameWidth: 32, frameHeight: 48 });
+        this.load.image('circle', 'images/character.png');
+        this.load.image('square', 'images/square.png');
+        this.load.image('triangle', 'images/hazard.png');
+        this.load.image('star', 'images/star.png');
     }
 
     var platforms;
     var score = 0;
     var scoreText;
     var gravityValue = 300;
+    var grappled = false;
 
     function create ()
     {
-        this.add.image(400, 300, 'sky');
+        this.add.image(800, 600, 'sky').setScale(2);
+
         platforms = this.physics.add.staticGroup();
-        platforms.create(400, 568, 'ground').setScale(2).refreshBody();
+        createPlatforms();
 
-        platforms.create(600, 400, 'ground');
-        platforms.create(50, 250, 'ground');
-        platforms.create(750, 220, 'ground');
-
-        player = this.physics.add.sprite(100, 450, 'dude');
-
-        player.setBounce(0.2);
-        player.setCollideWorldBounds(true);
-        
-        this.anims.create({
-            key: 'left',
-            frames: this.anims.generateFrameNumbers('dude', {start: 0, end: 3}),
-            frameRate: 10,
-            repeat: -1
-        });
-
-        this.anims.create({
-            key: 'turn', 
-            frames: [ {key: 'dude', frame: 4}],
-            frameRate: 20
-        });
-
-        this.anims.create({
-            key: 'right',
-            frames: this.anims.generateFrameNumbers('dude', {start: 5, end: 8}),
-            frameRate: 10,
-            repeat: -1
-        });
-
-        this.physics.add.collider(player, platforms);
-        cursors = this.input.keyboard.createCursorKeys();
+        player = this.physics.add.sprite(100, 450, 'circle');
+        createPlayer();
 
         stars = this.physics.add.group({
             key: 'star',
             repeat: 11,
-            setXY: { x: 12, y: 0, stepX: 70 }
+            setXY: { x: 12, y: 50, stepX: 70 }
         });
+        createStars();
 
+        hazards = this.physics.add.group();
+        this.physics.add.collider(player, hazards, hitHazard, null, this);
+
+        this.physics.add.collider(stars, platforms);
+        this.physics.add.collider(player, platforms);
+        this.physics.add.overlap(player, stars, collectStar, null, this);
+        cursors = this.input.keyboard.createCursorKeys();
+        scoreText = this.add.text(16, 16, 'Score: 0', {fontSize: '32px', fill: '#000'});
+    }
+
+    function createPlatforms ()
+    {
+        platforms.create(400, 568, 'ground').setScale(4).refreshBody();
+        platforms.create(600, 400, 'ground');
+        platforms.create(50, 250, 'ground');
+        platforms.create(750, 220, 'ground');
+    }
+
+    function createPlayer () 
+    {
+        player.setBounce(0.2);
+        player.setCollideWorldBounds(true);
+    }
+
+    function createHazards ()
+    {
+
+    }
+
+    function hitHazard (player, hazard) 
+    {
+        this.physics.pause();
+        player.setTint(0xff0000);
+        gameOver = true;
+    }
+
+    function createStars () 
+    {
         stars.children.iterate(function (child) {
 
             child.setBounceY(Phaser.Math.FloatBetween(0.4, 0.8));
 
         });
-
-        this.physics.add.collider(stars, platforms);
-
-        this.physics.add.overlap(player, stars, collectStar, null, this);
-
-        scoreText = this.add.text(16, 16, 'Score: 0', {fontSize: '32px', fill: '#000'});
-
-        bombs = this.physics.add.group();
-        this.physics.add.collider(bombs, platforms);
-        this.physics.add.collider(player, bombs, hitBomb, null, this);
-        
-    }
-
-    function hitBomb (player, bomb){
-        this.physics.pause();
-        player.setTint(0xff0000);
-        player.anims.play('turn');
-        gameOver = true;
     }
 
     function collectStar (player, star)
@@ -134,10 +132,10 @@
 
             var x = (player.x < 400) ? Phaser.Math.Between(400, 800) : Phaser.Math.Between(0, 400);
 
-            var bomb = bombs.create(x, 16, 'bomb');
-            bomb.setBounce(1);
-            bomb.setCollideWorldBounds(true);
-            bomb.setVelocity(Phaser.Math.Between(-200, 200), 20);
+            var hazard = hazards.create(x, 16, 'triangle');
+            hazard.setBounce(1);
+            hazard.setCollideWorldBounds(true);
+            hazard.setVelocity(Phaser.Math.Between(-200, 200), 20);
 
         }
 
