--- a/GravityGrappler.html
+++ b/GravityGrappler.html
@@ -1,6 +1,6 @@
-<!doctype html> 
-<html lang="en"> 
-<head> 
+<!doctype html>
+<html lang="en">
+<head>
     <meta charset="UTF-8" />
     <title>Making your first Phaser 3 Game - Part 1</title>
     <script src="//cdn.jsdelivr.net/npm/phaser@3.11.0/dist/phaser.js"></script>
@@ -57,8 +57,9 @@
     var akey;
     var skey;
     var dkey;
-    var tint = false;
     var hookDown = false;
+    var isHooked = false;
+    var gameOver = false;
 
     function create ()
     {
@@ -103,7 +104,7 @@
         platforms.create(750, 220, 'ground');*/
     }
 
-    function createPlayer () 
+    function createPlayer ()
     {
         player.setBounce(0.2);
         player.setCollideWorldBounds(true);
@@ -114,14 +115,14 @@
 
     }
 
-    function hitHazard (player, hazard) 
+    function hitHazard (player, hazard)
     {
         this.physics.pause();
         player.setTint(0xff0000);
         gameOver = true;
     }
 
-    function createStars () 
+    function createStars ()
     {
         stars.children.iterate(function (child) {
 
@@ -151,7 +152,7 @@
                     closestGrappleDist = thisDist;
                 }
 
-            } 
+            }
         }
         console.log("\n")
         return closestGrapple
@@ -199,46 +200,47 @@
     function updateGrapple ()
     {
         nearestGrapple = findClosestGrapple();
-        if (tint == false){
-            nearestGrapple.setTint(0xff00000);
-            tint = true;
+        if (isHooked){
+            isHooked = false;
         }
         else {
-            nearestGrapple.setTint(0x000000);
-            tint = false;
+            isHooked = true;
         }
     }
 
     function update ()
     {
-        
-        if (cursors.space.isDown){
-            if (!hookDown){
-                updateGrapple()
-                hookDown = true;
-            }
+        if (gameOver) {
         }
         else {
-            hookDown = false;
-        }
 
-        if (cursors.left.isDown)
-        {
-            setGravity(-gravityValue, 0)
+          if (cursors.space.isDown){
+              if (!hookDown){
+                  updateGrapple()
+                  hookDown = true;
+              }
+          }
+          else {
+              hookDown = false;
+          }
+
+          if (cursors.left.isDown)
+          {
+              setGravity(-gravityValue, 0)
+          }
+          else if (cursors.right.isDown)
+          {
+              setGravity(gravityValue, 0);
+          }
+          else if (cursors.up.isDown)
+          {
+              setGravity(0, -gravityValue);
+          }
+          else if (cursors.down.isDown)
+          {
+              setGravity(0, gravityValue);
+          }
         }
-        else if (cursors.right.isDown)
-        {
-            setGravity(gravityValue, 0);
-        }
-        else if (cursors.up.isDown)
-        {
-            setGravity(0, -gravityValue);
-        }
-        else if (cursors.down.isDown)
-        {
-            setGravity(0, gravityValue);
-        }
-        hazards.angle += 1;
     }
 
 </script>
