--- a/GravityGrappler.html
+++ b/GravityGrappler.html
@@ -14,8 +14,8 @@
 
 <script type="text/javascript">
 
-    var SizeY = 800;
-    var SizeX = 800;
+    var SizeY = 850;
+    var SizeX = 850;
 
     var config = {
         type: Phaser.AUTO,
@@ -45,6 +45,7 @@
         this.load.image('hazard', 'images/hazard.png');
         this.load.image('grapple', 'images/grapple.png');
         this.load.image('star', 'images/star.png');
+        this.load.image('space', 'images/spacebackground.jpeg');
     }
 
     var platforms;
@@ -66,7 +67,7 @@
 
     function create ()
     {
-        this.add.image(800, 600, 'sky').setScale(2);
+        this.add.image(800, 600, 'space');
 
         platforms = this.physics.add.staticGroup();
         createPlatforms();
@@ -95,18 +96,21 @@
         this.physics.add.collider(player, platforms);
         this.physics.add.overlap(player, stars, collectStar, null, this);
         cursors = this.input.keyboard.createCursorKeys();
-        scoreText = this.add.text(16, 16, 'Score: 0', {fontSize: '32px', fill: '#000'});
-
-        this.input.keyboard.on('keydown-' + 'W', function (event) { setGravity(0, -gravityValue) });
+        
         updateGrapple();
     }
 
     function createPlatforms ()
     {
-        /*platforms.create(SizeX/2, SizeY, 'ground').setScale(4).refreshBody();
-        platforms.create(600, 400, 'ground');
-        platforms.create(50, 250, 'ground');
-        platforms.create(750, 220, 'ground');*/
+        platforms.create(SizeX/2, SizeY, 'ground').setScale(4).refreshBody();
+        platforms.create(SizeX/2, 0, 'ground').setScale(4).refreshBody();
+        platforms.create(0, SizeY/2, 'ground').setScale(4).refreshBody();
+        platforms.create(SizeX, SizeY/2, 'ground').setScale(4).refreshBody();
+        var r;
+        for (r = 2; r < 4; r++){
+            platforms.getChildren()[r].angle += 90;
+        }
+
     }
 
     function createPlayer ()
