--- a/GravityGrappler.html
+++ b/GravityGrappler.html
@@ -16,6 +16,8 @@
 
     var SizeY = 850;
     var SizeX = 850;
+    var xgrav = 0;
+    var ygrav = gravityValue;
 
     var config = {
         type: Phaser.AUTO,
@@ -97,7 +99,7 @@
         stars = this.physics.add.group({
             key: 'star',
             repeat: 11,
-            setXY: { x: 12, y: 50, stepX: 70 }
+            setXY: { x: Phaser.Math.Between(50, SizeX - 50), y: Phaser.Math.Between(50, SizeY - 50)}
         });
         createStars();
 
@@ -211,11 +213,21 @@
 
         if (stars.countActive(true) === 0)
         {
-            stars.children.iterate(function (child) {
+            /*stars.children.iterate(function (child) {
 
                 child.enableBody(true, child.x, 0, true, true);
 
+            });*/
+
+            stars = this.physics.add.group({
+            key: 'star',
+            repeat: 11,
+            setXY: { x: Phaser.Math.Between(50, SizeX - 50), y: Phaser.Math.Between(50, SizeY - 50)}
             });
+            createStars();
+            this.physics.add.overlap(player, stars, collectStar, null, this);
+
+
 
             var x = (player.x < 400) ? Phaser.Math.Between(400, 800) : Phaser.Math.Between(0, 400);
 
@@ -223,6 +235,7 @@
             hazard.setBounce(1);
             hazard.setCollideWorldBounds(true);
             hazard.setVelocity(Phaser.Math.Between(-200, 200), 20);
+            hazard.setGravity
             // hazard.body.setBoundsRectangle();
 
         }
@@ -248,6 +261,17 @@
     {
         nearestGrapple = findClosestGrapple();
         highlight(nearestGrapple, 1);
+    }
+
+    function updateGravity()
+    {
+        player.setGravity(xgrav, ygrav);
+        var hazardInstances = hazards.getChildren();
+        var hz;
+        for (hz = 0; hz < hazardInstances.length; hz++){
+            hazardInstances[hz].setGravity(xgrav, ygrav);
+        }
+
     }
 
     function update ()
@@ -287,20 +311,25 @@
 
             if (cursors.left.isDown)
             {
-                player.setGravity(-gravityValue, 0)
+                xgrav = -gravityValue;
+                ygrav = 0;
             }
             else if (cursors.right.isDown)
             {
-                player.setGravity(gravityValue, 0);
+                xgrav = gravityValue;
+                ygrav = 0;
             }
             else if (cursors.up.isDown)
             {
-                player.setGravity(0, -gravityValue);
+                xgrav = 0;
+                ygrav = -gravityValue;
             }
             else if (cursors.down.isDown)
             {
-                player.setGravity(0, gravityValue);
+                xgrav = 0;
+                ygrav = gravityValue;
             }
+            updateGravity();
         }
     }
 
